Addressing some tect debt in tests.