@@ -37,7 +37,7 @@ public class IgnoredPatternsFilterTest {
         ignoredPattern.setName("example-id");
 
         final Policy policy = new Policy();
-        policy.setIgnoredPatterns(Arrays.asList(ignoredPattern));
+        policy.setIgnoredPatterns(List.of(ignoredPattern));
 
         final List<Span> spans = new LinkedList<>();
         spans.add(Span.make(6, 10, FilterType.IDENTIFIER, "context", "docid", 0.80, "AB01", "*****",  "", false, true, new String[0], 0));
@@ -57,12 +57,12 @@ public class IgnoredPatternsFilterTest {
         ignoredPattern.setName("example-id");
 
         final Policy policy = new Policy();
-        policy.setIgnoredPatterns(Arrays.asList(ignoredPattern));
+        policy.setIgnoredPatterns(List.of(ignoredPattern));
 
         final List<Span> spans = new LinkedList<>();
         spans.add(Span.make(6, 10, FilterType.IDENTIFIER, "context", "docid", 0.80, "Ab01", "*****",  "", false, true, new String[0], 0));
 
-        final IgnoredPatternsFilter ignoredPatternsFilter = new IgnoredPatternsFilter(Arrays.asList(ignoredPattern));
+        final IgnoredPatternsFilter ignoredPatternsFilter = new IgnoredPatternsFilter(List.of(ignoredPattern));
         final List<Span> filteredSpans = ignoredPatternsFilter.filter("ID is Ab01.", spans);
 
         Assertions.assertEquals(1, filteredSpans.size());
